# wxFormBuilder

./: index.html  params.json
1.x/trunk/src/: Makefile  maingui.cpp  wxFormBuilder.cbp  wxFormBuilder.rc
3.x/branches/3.2/: Doxyfile  premake.lua
3.x/branches/3.2.4/: create_build_files4.sh
3.x/branches/auiframe/: AUIGUI.txt  wx29build.txt
3.x/branches/auinotebook/: premake.lua
3.x/branches/evtHandler/: wxFormBuilder.workspace
3.x/branches/macbuildsystem/: premake.lua
3.x/branches/newpropgrid/: TODO_newpropgrid.txt
3.x/branches/premake/: create_build_files.sh
3.x/branches/rc5/: create_build_files.sh
3.x/branches/tooltreebooks/: tooltreebooks_TODO.txt
3.x/trunk/: create_build_files4.bat
3.x/trunk/output/: Changelog.txt
3.x/trunk/src/: maingui.cpp  wxFormBuilder.rc
4.x/branches/xrcbased/: create_build_files.bat  create_build_files.sh
4.x/trunk/: CMakeLists.txt  CMake_Install.txt  CodeLite.txt  Doxyfile  create_build_files.sh  premake.lua
4.x/trunk/cmake/: Doxyfile.in  FindwxWidgets.cmake
4.x/trunk/locale/: wxformbuilder.pot
4.x/trunk/locale/de_DE/LC_MESSAGES/: wxformbuilder.mo  wxformbuilder.po
4.x/trunk/locale/it_IT/LC_MESSAGES/: wxformbuilder.mo  wxformbuilder.po
4.x/trunk/output/locale/it_IT/LC_MESSAGES/: wxformbuilder.po
4.x/trunk/output/plugins/additional/icons/: htmllbox.xpm  htmlwin.xpm
4.x/trunk/output/plugins/additional/xml/: additional.cppcode  additional.pythoncode  additional.xml
4.x/trunk/output/plugins/common/icons/: auibar.xpm
4.x/trunk/output/plugins/common/xml/: common.cppcode  common.pythoncode  common.xml  forms.cppcode  forms.pythoncode  forms.xml  menutoolbar.cppcode  menutoolbar.pythoncode  menutoolbar.xml
4.x/trunk/output/plugins/containers/icons/: collpane.xpm  treebook.xpm
4.x/trunk/output/plugins/containers/xml/: containers.cppcode  containers.pythoncode  containers.xml
4.x/trunk/output/plugins/edit/icons/: scintilla.xpm  scintilla_24.xpm
4.x/trunk/output/plugins/edit/xml/: edit.cppcode  edit.pythoncode  edit.xml
4.x/trunk/output/plugins/picker/xml/: picker.cppcode  picker.pythoncode  picker.xml
4.x/trunk/output/resources/: about.html
4.x/trunk/output/xml/: default.cppcode  default.pythoncode  objtypes.xml
4.x/trunk/plugins/: CMakeLists.txt  premake.lua
4.x/trunk/plugins/additional/: CMakeLists.txt  additional.cpp  premake.lua
4.x/trunk/plugins/common/: CMakeLists.txt  common.cpp  premake.lua
4.x/trunk/plugins/containers/: CMakeLists.txt  bookutils.h  containers.cpp  premake.lua
4.x/trunk/plugins/edit/: CMakeLists.txt  edit.cpp  premake.lua
4.x/trunk/plugins/layout/: CMakeLists.txt  premake.lua
4.x/trunk/plugins/picker/: CMakeLists.txt  picker.cpp  premake.lua
4.x/trunk/sdk/: CMakeLists.txt
4.x/trunk/sdk/plugin_interface/: CMakeLists.txt  component.h  premake.lua  xrcconv.cpp  xrcconv.h
4.x/trunk/sdk/premake/scripts/: wxpresets.lua
4.x/trunk/src/: CMakeLists.txt  maingui.cpp  maingui.h  premake.lua  splashscreen.h
4.x/trunk/src/boost/: readme.txt
4.x/trunk/src/codegen/: codegen.cpp  codegen.h  codeparser.cpp  codeparser.h  codewriter.cpp  codewriter.h  cppcg.cpp  cppcg.h  pythoncg.cpp  pythoncg.h  xrccg.cpp  xrccg.h
4.x/trunk/src/model/: database.cpp  database.h  objectbase.cpp  objectbase.h  types.cpp  types.h  xrcfilter.cpp  xrcfilter.h
4.x/trunk/src/rad/: about.cpp  about.h  appdata.cpp  appdata.h  cmdproc.cpp  cmdproc.h  customkeys.h  genericpanel.cpp  genericpanel.h  mainframe.cpp  mainframe.h  maingui.cpp  maingui.h  menueditor.cpp  menueditor.h  palette.cpp  palette.h  splashscreen.cpp  splashscreen.h  wxfbevent.cpp  wxfbmanager.cpp  wxfbpalette.cpp  wxfbpalette.h
4.x/trunk/src/rad/codeeditor/: codeeditor.cpp  codeeditor.h
4.x/trunk/src/rad/cpppanel/: cpppanel.cpp
4.x/trunk/src/rad/dataobject/: dataobject.cpp  dataobject.h
4.x/trunk/src/rad/designer/: innerframe.h  menubar.cpp  visualeditor.cpp  visualeditor.h  visualobj.cpp  visualobj.h  window_buttons.h
4.x/trunk/src/rad/geninheritclass/: geninhertclass.cpp
4.x/trunk/src/rad/inspector/: objinspect.cpp  objinspect.h
4.x/trunk/src/rad/objecttree/: objecttree.cpp  objecttree.h
4.x/trunk/src/rad/pythonpanel/: pythonpanel.cpp  pythonpanel.h
4.x/trunk/src/rad/xrcpanel/: xrcpanel.cpp  xrcpanel.h
4.x/trunk/src/rad/xrcpreview/: xrcpreview.cpp
4.x/trunk/src/utils/: annoyingdialog.h  encodingutils.cpp  encodingutils.h  stringutils.cpp  typeconv.cpp  wxfbdefs.h  wxfbipc.h
additions/branches/trunk/: wxadditions.workspace
additions/branches/wx270/: wxadditions.workspace  wxadditions_unix.workspace
additions/trunk/: wxadditions_unix.workspace
additions/trunk/wxfbPlugin/: create_build_files.bat  create_build_files.sh  premake.lua  wxAdditions-unix.cbp  wxAdditions.cbp  wxAdditions.cpp  wxAdditions.workspace
branches/josehurt/src/: Makefile.win  wxFormBuilder_private.h
plugins/trunk/test/: gui.cpp  indctrls_test.fbp
plugins/trunk/wxfbPlugin/: create_build_files.bat  premake.lua
tags/initial/src/: wxFormBuilder.kdevses
trunk/src/: Makefile  Makefile.lnx-unicode  Makefile.win  README.txt  maingui.cpp  todo.txt  wxFB_wx242.dev  wxFB_wx242.layout  wxFormBuilder.cbp  wxFormBuilder.dev  wxFormBuilder.layout  wxFormBuilder.rc  wxFormBuilder.workspace  wxFormBuilder_private.rc  wxFormBuilder_private.res
trunk/src/codegen/: codegen.cpp  codegen.h  cppcg.cpp  cppcg.h  xrccg.cpp  xrccg.h
trunk/src/icons/: copy.xpm  ot_project.xpm  play.xpm
trunk/src/model/: database.cpp  database.h  objectbase.cpp  objectbase.h  types.cpp  types.h  xrcfilter.cpp  xrcfilter.h
trunk/src/plugins/: component.h  plugin.h
trunk/src/rad/: about.cpp  about.h  appdata.cpp  appdata.h  appobserver.h  bitmaps.cpp  bitmaps.h  cmdproc.cpp  cmdproc.h  global.cpp  global.h  guirad.cpp  mainframe.cpp  mainframe.h  menueditor.cpp  menueditor.h  palette.cpp  palette.h  title.cpp
trunk/src/resources/: about.html
trunk/src/utils/: debug.cpp  debug.h  typeconv.cpp  typeconv.h  xrcconv.cpp  xrcconv.h
trunk/src/xml/: additional.cppcode  additional.xml  common.cppcode  common.xml  default.cppcode  default.xml  forms.cppcode  (+6 more)
(+1059 files in other folders)
